--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,30 @@
 body {
     text-align: center;
+    background-color: aliceblue;
+}
+
+.container { 
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 30px;
+    margin: 60px 0;
+    box-shadow: 10px 5px 5px rgba(109, 107, 107, 0.04);
+    background-color: rgb(255, 255, 255);
+}
+
+select {
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    padding: 10px;
+}
+
+.city { 
+    display: flex;
+    justify-content: space-between;
+}
+
+.time {
+    font-size: 30px;
+    font-weight: bold;
 }
