--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,24 @@
 body {
-    text-align: center;
-    background-color: aliceblue;
+    background-color: rgb(203, 225, 244);
 }
 
 .container { 
     max-width: 600px;
-    margin: 0 auto;
+    background: white;
+    box-shadow: 0px 7px 29px 0px rgb(173, 173, 174, 0.2);
+    margin: 60px auto;
     padding: 30px;
-    margin: 60px 0;
-    box-shadow: 10px 5px 5px rgba(109, 107, 107, 0.04);
-    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 36px;
+}
+
+h2 {
+    margin: 0 0 5px;
+    font-size: 28px;
 }
 
 select {
@@ -22,9 +31,27 @@ select {
 .city { 
     display: flex;
     justify-content: space-between;
+    margin: 10px 0;
+    padding: 15px 0;
+    border-bottom: 1px dashed;
+}
+
+.date {
+    opacity: .5;
 }
 
 .time {
     font-size: 30px;
     font-weight: bold;
+}
+
+.time small {
+    font-size: 24px;
+    vertical-align: middle;
+    line-height: 48px;
+}
+
+footer {
+    text-align: center;
+    font-size: 18px;
 }
